--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "through": "~2.3.4"
   },
   "peerDependencies": {
-    "xcss": "~1.1.3"
+    "xcss": "1.x"
   },
   "devDependencies": {
     "semver": "~2.2.1",
